examples/test/testpolicy13519.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13519
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key42: value12
      key33: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value33
          key34: value20
      podSelector:
        matchLabels:
          key29: value27
          key15: value40
          key13: value4
